# dsigma

./: .gitmodules  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
dsigma/: _precompute_cuda.cpp  _precompute_cuda.pxd  _precompute_cuda.pyx  cuda_host_utils.cpp  cuda_host_utils.h  healpix_gpu.cu  healpix_gpu.h  jackknife.py  kdtree_search_gpu.cu  kdtree_search_gpu.h  precompute.py  precompute_engine.pyx  precompute_engine_cuda.cu  precompute_engine_cuda.h  precompute_interface.cpp  precompute_interface.cu  precompute_interface.h  stacking.py
dsigma/surveys/: hsc.py
dsigma/tests/: test_precompute_gpu.py
tests/: fixtures.py  test_gpu.py
