[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "cython",
    "numpy",
    "torch",
    "build"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Help CMake find conda environment packages
cmake.verbose = true
cmake.build-type = "Release"

[project]
name = "dsigma"
version = "0.1.0"
requires-python = ">=3.9"
authors = [{name = "Johannes U. Lange", email = "jlange@american.edu"},
           {name = "Song Huang"}]
readme = "README.md"
keywords = ["astronomy", "weak-lensing"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy", "astropy", "scipy", "scikit-learn", "astropy-healpix",
                "tqdm"]

[project.urls]
Homepage = "https://github.com/johannesulf/dsigma"
Documentation = "https://dsigma.readthedocs.io"
Repository = "https://github.com/johannesulf/dsigma.git"
Issues = "https://github.com/johannesulf/dsigma/issues"
Changelog = "https://github.com/johannesulf/dsigma/blob/main/CHANGELOG.md"

